# fin_chatbot

./: .gitignore  .infra-refs.yaml  PHASES.md  README.md  infra_base.sh
.github/workflows/: deploy.yaml
src/: .dockerignore  .env.example  Dockerfile  app.py  artifacts.py  db.py  main.py  pyproject.toml
src/eval/: EVAL_CHECKLIST.md  run_evaluation.py  test_cases.json
terraform/: container_app.tf  main.tf  variables.tf
